--- a/nginx.conf
+++ b/nginx.conf
@@ -27,4 +27,17 @@ http {
         server_name not_found;
         return 404;
     }
+    # Forward requests to the host's localhost:11434
+    server {
+        listen 11434;
+        server_name memgpt.localhost;
+
+        location / {
+            proxy_pass http://host.docker.internal:11434;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
