--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   memgpt_db:
     image: ankane/pgvector:v0.5.1
     networks:
-      default:
+      memgpt_network:
         aliases:
           - pgvector_db
           - memgpt-db
@@ -16,13 +16,18 @@ services:
     ports:
       - "5432:5432"
   memgpt_server:
-    image: memgpt/memgpt-server:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: memgpt/memgpt-server-ollama:latest
     hostname: memgpt-server
     depends_on:
       - memgpt_db
     ports:
       - "8083:8083"
       - "8283:8283"
+    networks:
+      - memgpt_network
     env_file:
       - .env
     environment:
@@ -44,3 +49,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
+      - "11434:11434"
+
+networks:
+  memgpt_network:
+    driver: bridge
