--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ sqlmodel = "^0.0.16"
 autoflake = {version = "^2.3.0", optional = true}
 llama-index = "^0.10.27"
 llama-index-embeddings-openai = "^0.1.1"
-llama-index-embeddings-huggingface = {version = "^0.2.0", optional = true}
+llama-index-embeddings-huggingface = {version = "^0.2.0"}
 llama-index-embeddings-azure-openai = "^0.1.6"
 python-multipart = "^0.0.9"
 sqlalchemy-utils = "^0.41.2"
